k8s/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chatapp
      labels:
        app: backend
    spec:
      containers:
      - name: chatapp-backend
        image:  sunilchouha/backend:latest
        ports:
        - containerPort: 5001
