k8s/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend
    spec:
      containers:
      - name: chatapp-frontend
        image:  sunilchouha/frontend:latest
        ports:
        - containerPort: 80
