k8s/mongodb-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: chat-app
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
