k8s/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: chat-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
