k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chat-app
spec:
  selector:
    app: frontend
  ports:
    - port: 81
      targetPort: 80
  type: ClusterIP
