k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: chatapp
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
